Mg-06) DataAccess package added. And City Entity and ICityDal files created.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,3 @@
-spring.datasource.url="jdbc:mysql://localhost:3306/world"
-spring.datasource.username="root"
-spring.datasource.password="root"
+spring.datasource.url=jdbc:mysql://localhost:3306/world?useSSL=false&amp;serverTimezone=UTC
+spring.datasource.username=root
+spring.datasource.password=root
